# obsidian-base-reader

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/source/: conf.py  index.md  installation.md
examples/obsbase_vault/: top50.base
examples/obsbase_vault/.obsidian/: workspace.json
examples/obsbase_vault/villes/: Agen.md  Aix-en-Provence.md  Aix-les-Bains.md  Ajaccio.md  Albi.md  Alfortville.md  Alès.md  Amiens.md  Angers.md  Anglet.md  Angoulême.md  Annecy[h].md  Annemasse.md  Antibes.md  Antony.md  Argenteuil.md  Arles.md  Arras.md  Asnières-sur-Seine.md  Athis-Mons.md  Aubagne.md  Aubervilliers.md  Aulnay-sous-Bois.md  Auxerre.md  Avignon.md  Bagneux.md  Bagnolet.md  Baie-Mahault.md  Bastia.md  Bayonne.md  Beauvais.md  Belfort.md  Besançon.md  Bezons.md  Blois.md  Bobigny.md  Bondy.md  Bordeaux.md  Boulogne-Billancourt.md  Boulogne-sur-Mer.md  (+248 more)
obsbase/: __init__.py  base.py  file.py  filters.py  note.py  query.py  resultset.py  vault.py  view.py
obsbase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_file.py  test_filters.py  test_note.py  test_resultset.py  test_view.py
