[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsbase"
version = "0.1.1"
description = "Read and query Obsidian Base (.base) files from Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "FEVRE Lionel" }
]

dependencies = [
    "PyYAML",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "myst-parser",
    "sphinx-autoapi",
    "furo",
]